--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pour Alyson ❤️</title>
+    <title>Pour Valentine ❤️</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        @font-face { 
+    font-family: 'Valentine Baby';
+    src: url('ValentineBaby.otf') format('truetype');
+        } 
+        body{
+            height: 100vh;
+        }
+        </style>
 </head>
 <body>
     <div class="container">
-        <h1>Pour Alyson ❤️</h1>
+        <h1 style="font-family: 'Valentine Baby';">Pour Alyson ❤️</h1>
         <p>Bienvenue mon amour,</p>
         <p>Ce site est un petit monde de surprises et d'activités, créé juste pour toi. Amuse-toi bien !</p>
         <button onclick="openMainPage()">Ouvre-moi</button>
@@ -16,3 +25,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
