--- a/callhours.html
+++ b/callhours.html
@@ -4,86 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Statistiques ❤️</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: 'Arial, sans-serif';
-            background-color: #ffe6e6;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
         .container {
-            text-align: center;
-            background-color: #fff;
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-            width: 68%;
+            width: 80%;
             max-width: 500px;
-            z-index: 1;
-            position: relative; 
-            padding: 40px;
-            margin-top: 75px;
+            padding: 20px; 
+            margin-top: 20px;
             padding-top: 10px;
             padding-bottom: 20px;
             margin-bottom: 10px;
             max-height: 100%;
-            min-height: 900px;
+            min-height: auto;
             overflow: auto;
         }
-
-        h1 {
-            color: #ff4d4d;
-            font-size: 28px;
-            margin-bottom: 20px;
-        }
-
-        .stat {
-            margin: 20px 0;
-        }
-
-        .stat-value {
-            font-size: 60px;
-            font-weight: bold;
-            color: #ff4d4d;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .stat-value span {
-            margin: 0 10px;
-            padding: 15px 25px;
-            background-color: #ff4d4d;
-            color: white;
-            border-radius: 10px;
-            font-size: 50px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .stat-label {
-            font-size: 20px;
-            color: #ff4d4d;
-            margin-top: 5px;
-        }
-
-        button {
-            padding: 12px 30px;
-            font-size: 18px;
-            cursor: pointer;
-            margin-top: 20px;
-            background-color: #ff4d4d;
-            color: white;
-            border: none;
-            border-radius: 17px;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: #ff1a1a;
-        }
+    
     </style>
 </head>
 <body>
