--- a/iloveyou.html
+++ b/iloveyou.html
@@ -4,81 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur de "Je t'aime" ❤️</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: 'Arial, sans-serif';
-            background-color: #ffe6e6;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        body{
             height: 100vh;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        .container {
-            text-align: center;
-            background-color: #fff;
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-            width: 73%;
-            max-width: 600px;
-            position: relative;
-            z-index: 1;
-        }
-
-        h1 {
-            color: #ff4d4d;
-            font-size: 28px;
-            margin-bottom: 20px;
-        }
-
-        .message {
-            font-size: 24px;
-            color: #ff4d4d;
-            margin: 20px 0;
-        }
-
-        button {
-            padding: 12px 30px;
-            font-size: 18px;
-            cursor: pointer;
-            margin-top: 20px;
-            background-color: #ff4d4d;
-            color: white;
-            border: none;
-            border-radius: 17px;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: #ff1a1a;
-        }
-
-        .heart {
-            position: absolute;
-            color: #ff4d4d;
-            font-size: 24px;
-            animation: float 5s infinite;
-        }
-
-        @keyframes float {
-            0% {
-                transform: translateY(0);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(-100vh);
-                opacity: 0;
-            }
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Générateur de "Je t'aime" ❤️</h1>
-        <div class="message" id="loveMessage">Clique sur le bouton pour générer un message</div>
+        <p class="message" id="loveMessage">Clique sur le bouton pour générer un message</p>
         <button onclick="generateLoveMessage()">Générer</button>
         <button onclick="goBack()">Retour</button>
     </div>
