--- a/lovegame.html
+++ b/lovegame.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeu de Lettres</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            height:100vh;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="font-family: 'Wasted Vindey', serif;">
         <h1>Jeu de Lettres</h1>
         <p>Reconstituez le mot.</p>
         
@@ -62,7 +67,7 @@
             const answerBox = document.getElementById('answerBox');
             answerBox.innerHTML = '';
             currentWord.replace(/\s+/g, '').split('').forEach(() => {
-                const slot = document.createElement('div');
+                const slot = document.createElement('p');
                 slot.classList.add('slot');
                 slot.onclick = () => handleSlotClick(slot);
                 answerBox.appendChild(slot);
@@ -82,7 +87,7 @@
             const lettersToChoose = currentWord.replace(/\s+/g, '').split('');
             shuffleArray(lettersToChoose);
             lettersToChoose.forEach(letter => {
-                const letterBlock = document.createElement('div');
+                const letterBlock = document.createElement('p');
                 letterBlock.classList.add('letterBlock');
                 letterBlock.textContent = letter;
                 letterBlock.onclick = () => handleLetterClick(letterBlock);
@@ -104,7 +109,7 @@
         function handleSlotClick(slot) {
             if (slot.innerText !== '') {
                 const letterChoices = document.getElementById('letterChoices');
-                const letterBlock = document.createElement('div');
+                const letterBlock = document.createElement('p');
                 letterBlock.classList.add('letterBlock');
                 letterBlock.textContent = slot.innerText;
                 letterBlock.onclick = () => handleLetterClick(letterBlock);
@@ -141,12 +146,5 @@
 
         loadLevel();
     </script>
-    
-    <style>
-        .container { text-align: center; margin-top: 50px; }
-        .answer-box, .letter-choices { display: flex; justify-content: center; flex-wrap: wrap; gap: 10px; margin-bottom: 20px; }
-        .slot, .letterBlock { width: 40px; height: 40px; border: 2px solid #000; display: flex; align-items: center; justify-content: center; font-size: 20px; font-weight: bold; cursor: pointer; }
-        button { padding: 10px 20px; font-size: 16px; cursor: pointer; margin: 10px; }
-    </style>
 </body>
 </html>
