--- a/main.html
+++ b/main.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activités pour Alyson</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body{
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="font-family: 'Wasted Vindey', serif;">
         <h1>Salut mon coeur ❤️</h1>
         <p>Choisis un bouton pour découvrir une surprise !</p>
         <div class="activities">
