--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pour Valentine ❤️</title>
+    <title>Pour Alyson ❤️</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         @font-face { 
-    font-family: 'Valentine Baby';
-    src: url('ValentineBaby.otf') format('truetype');
+            font-family: 'Valentine Baby';
+            src: url('ValentineBaby.otf') format('truetype');
         } 
         body{
             height: 100vh;
         }
-        </style>
+    </style>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#ffe6e6">
+    <link rel="shortcut icon" href="favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffe6e6">
+    <meta name="theme-color" content="#ffe6e6">
 </head>
 <body>
     <div class="container">
