nouvelle page musique

--- a/main.html
+++ b/main.html
@@ -29,8 +29,14 @@
             <button onclick="generateLove()">Générateur de "Je t'aime"</button>
             <button onclick="openStoryBook()">Notre Histoire</button>
             <button onclick="openPuzzle()">Puzzle</button>
+            <button onclick="openMusicPage()">Musiques</button>
         </div>
     </div>
     <script src="scripts.js"></script>
+    <script>
+        function openMusicPage() {
+            window.location.href = 'music.html';
+        }
+    </script>
 </body>
 </html>
