ajout machine destin,phrase et promesse

--- a/main.html
+++ b/main.html
@@ -30,12 +30,27 @@
             <button onclick="openStoryBook()">Notre Histoire</button>
             <button onclick="openPuzzle()">Puzzle</button>
             <button onclick="openMusicPage()">Musiques</button>
+            <button onclick="openChallengeGenerator()">Machine à Destinée</button>
+            <button onclick="openCompletePhrases()">Phrases à Compléter</button>
+            <button onclick="openPromiseGenerator()">Générateur de Promesses</button>
         </div>
     </div>
     <script src="scripts.js"></script>
     <script>
         function openMusicPage() {
             window.location.href = 'music.html';
+        }
+        function openChallengeGenerator() {
+            window.location.href = 'challenge.html';
+        }
+        function openQuiz() {
+            window.location.href = 'quiz.html';
+        }
+        function openCompletePhrases() {
+            window.location.href = 'completephrases.html';
+        }
+        function openPromiseGenerator() {
+            window.location.href = 'promisegenerator.html';
         }
     </script>
 </body>
