--- a/main.html
+++ b/main.html
@@ -33,6 +33,7 @@
             <button onclick="openChallengeGenerator()">Machine à Destinée</button>
             <button onclick="openCompletePhrases()">Phrases à Compléter</button>
             <button onclick="openPromiseGenerator()">Générateur de Promesses</button>
+            <button onclick="openVraiOuFaux()">Vrai ou Faux</button>
         </div>
     </div>
     <script src="scripts.js"></script>
@@ -51,6 +52,9 @@
         }
         function openPromiseGenerator() {
             window.location.href = 'promisegenerator.html';
+        }
+        function openVraiOuFaux() {
+            window.location.href = 'vraioufaux.html';
         }
     </script>
 </body>
