--- a/music.html
+++ b/music.html
@@ -223,7 +223,7 @@
             <audio id="audio6" src="music/song6.mp3"></audio>
             <div class="song-info">
                 <h2>Iris</h2>
-                <p>Goo Goo Dolls</p>
+                <p>The Goo Goo Dolls</p>
             </div>
             <div class="progress-bar" onclick="seek(event, 'audio6')">
                 <div class="progress" id="progress6"></div>
