--- a/main.html
+++ b/main.html
@@ -6,9 +6,18 @@
     <title>Activités pour Alyson ❤️</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        body{
-            height: 100vh;
-        }
+        html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+.container {
+    max-height: 90vh;
+    overflow-y: auto;
+}
+
+
     </style>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -17,6 +26,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="msapplication-TileColor" content="#ffe6e6">
     <meta name="theme-color" content="#ffe6e6">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body>
     <div class="container" style="font-family: 'Wasted Vindey', serif;">
