--- a/music.html
+++ b/music.html
@@ -121,7 +121,7 @@
                 <svg class="play-icon" viewBox="0 0 64 64"><polygon points="16,12 54,32 16,52" /></svg>
                 <svg class="pause-icon" viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio1" src="music/song1.mp3"></audio>
+            <audio id="audio1" src="music/song1.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Unforgettable</h2>
                 <p>French Montana ft. Swae Lee</p>
@@ -141,7 +141,7 @@
                 <svg class="play-icon" viewBox="0 0 64 64"><polygon points="16,12 54,32 16,52" /></svg>
                 <svg class="pause-icon" viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio2" src="music/song2.mp3"></audio>
+            <audio id="audio2" src="music/song2.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Every Breath You Take</h2>
                 <p>The Police</p>
@@ -161,7 +161,7 @@
                 <svg class="play-icon" viewBox="0 0 64 64"><polygon points="16,12 54,32 16,52" /></svg>
                 <svg class="pause-icon" viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio3" src="music/song3.mp3"></audio>
+            <audio id="audio3" src="music/song3.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>[Everything I Do] I Do It For You</h2>
                 <p>Bryan Adams</p>
@@ -180,7 +180,7 @@
                 <svg class="play-icon" viewBox="0 0 64 64"><polygon points="16,12 54,32 16,52" /></svg>
                 <svg class="pause-icon" viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio4" src="music/song4.mp3"></audio>
+            <audio id="audio4" src="music/song4.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Just The Way You Are</h2>
                 <p>Bruno Mars</p>
@@ -200,7 +200,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio5" src="music/song5.mp3"></audio>
+            <audio id="audio5" src="music/song5.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Criminal</h2>
                 <p>Jazz Montell</p>
@@ -220,7 +220,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio6" src="music/song6.mp3"></audio>
+            <audio id="audio6" src="music/song6.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Iris</h2>
                 <p>The Goo Goo Dolls</p>
@@ -240,7 +240,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio7" src="music/song7.mp3"></audio>
+            <audio id="audio7" src="music/song7.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Hold On, We're Going Home</h2>
                 <p>Drake</p>
@@ -260,7 +260,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio8" src="music/song8.mp3"></audio>
+            <audio id="audio8" src="music/song8.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>I’m Yours</h2>
                 <p>Jason Mraz</p>
@@ -280,7 +280,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio9" src="music/song9.mp3"></audio>
+            <audio id="audio9" src="music/song9.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>When a Man Loves a Woman</h2>
                 <p>Percy Sledge</p>
@@ -300,7 +300,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio10" src="music/song10.mp3"></audio>
+            <audio id="audio10" src="music/song10.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>I Just Called to Say I Love You</h2>
                 <p>Stevie Wonder</p>
@@ -320,7 +320,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio11" src="music/song11.mp3"></audio>
+            <audio id="audio11" src="music/song11.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>For Certain</h2>
                 <p>PARTYNEXTDOOR</p>
@@ -340,7 +340,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio12" src="music/song12.mp3"></audio>
+            <audio id="audio12" src="music/song12.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Something Just Like This</h2>
                 <p>The Chainsmokers & Coldplay</p>
@@ -360,7 +360,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio13" src="music/song13.mp3"></audio>
+            <audio id="audio13" src="music/song13.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Count on Me</h2>
                 <p>Bruno Mars</p>
@@ -380,7 +380,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio14" src="music/song14.mp3"></audio>
+            <audio id="audio14" src="music/song14.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Someone to You</h2>
                 <p>BANNERS</p>
@@ -400,7 +400,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio15" src="music/song15.mp3"></audio>
+            <audio id="audio15" src="music/song15.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Somewhere Only We Know</h2>
                 <p>Keane</p>
@@ -420,7 +420,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio16" src="music/song16.mp3"></audio>
+            <audio id="audio16" src="music/song16.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Until I Found You</h2>
                 <p>Stephen Sanchez</p>
@@ -440,7 +440,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio17" src="music/song17.mp3"></audio>
+            <audio id="audio17" src="music/song17.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Those Eyes</h2>
                 <p>New West</p>
@@ -460,7 +460,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio18" src="music/song18.mp3"></audio>
+            <audio id="audio18" src="music/song18.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Beautiful Girls</h2>
                 <p>Sean Kingston</p>
@@ -480,7 +480,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio19" src="music/song19.mp3"></audio>
+            <audio id="audio19" src="music/song19.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Paris</h2>
                 <p>The Chainsmokers</p>
@@ -500,7 +500,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio20" src="music/song20.mp3"></audio>
+            <audio id="audio20" src="music/song20.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Locked Away</h2>
                 <p>Locked Away ft. Adam Levine</p>
@@ -520,7 +520,7 @@
                 <svg class="pause-icon
                 " viewBox="0 0 64 64"><rect x="20" y="12" width="8" height="40"/><rect x="36" y="12" width="8" height="40"/></svg>
             </div>
-            <audio id="audio21" src="music/song21.mp3"></audio>
+            <audio id="audio21" src="music/song21.mp3" preload="none"></audio>
             <div class="song-info">
                 <h2>Good Life</h2>
                 <p>OneRepublic</p>
@@ -538,20 +538,33 @@
     </div>
 
     <script>
+        let currentAudio = null;
+
         function togglePlay(audioId, item) {
             const audio = document.getElementById(audioId);
             const cover = item.querySelector('.album-cover');
             const currentTimeElem = document.getElementById('current' + audioId.replace('audio', ''));
             const durationElem = document.getElementById('duration' + audioId.replace('audio', ''));
 
+            if (currentAudio && currentAudio !== audio) {
+                currentAudio.pause();
+                const currentCover = document.querySelector('.album-cover.playing');
+                if (currentCover) {
+                    currentCover.classList.add('paused');
+                    currentCover.classList.remove('playing');
+                }
+            }
+
             if (audio.paused) {
                 audio.play();
                 cover.classList.remove('paused');
                 cover.classList.add('playing');
+                currentAudio = audio;
             } else {
                 audio.pause();
                 cover.classList.add('paused');
                 cover.classList.remove('playing');
+                currentAudio = null;
             }
 
             audio.ontimeupdate = () => {
@@ -564,6 +577,7 @@
             audio.onended = () => {
                 cover.classList.add('paused');
                 cover.classList.remove('playing');
+                currentAudio = null;
             };
         }
 
